manifests/base/recommendation/istio/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: recommendationservice
  namespace: recommendationservice
spec:
  workloadSelector:
    labels:
      app: recommendationservice
  egress:
    - hosts:
        - "istio-system/*"
        - "productcatalogservice/*"
